fix blue icon on mobile

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -239,6 +239,7 @@ font-weight: bolder;
   width: 30px;
   height: 30px;
   border-style: none;
+  -webkit-tap-highlight-color: transparent;
 }
 
 .edit-delete {
